--- a/LineWizard.GUI/Shared/MainLayout.razor
+++ b/LineWizard.GUI/Shared/MainLayout.razor
@@ -1,8 +1,8 @@
 ﻿@inherits LayoutComponentBase
 
-<MudThemeProvider/>
-<MudDialogProvider/>
-<MudSnackbarProvider/>
+<MudThemeProvider @bind-IsDarkMode="@themeOn"/>
+<MudDialogProvider />
+<MudSnackbarProvider />
 
 <MudLayout>
     <MudAppBar Elevation="1">
@@ -20,6 +20,7 @@
 </MudLayout>
 @code {
     bool _drawerOpen = true;
+    bool themeOn = true;
 
     void DrawerToggle()
     {
